objects/RagFileUDMO__dll.object
<CustomObject>
    <fields>
        <fullName>Col1__c</fullName>
        <label>Col1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Col2__c</fullName>
        <label>Col2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Col3__c</fullName>
        <label>Col3</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentType__c</fullName>
        <label>Content Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETag__c</fullName>
        <label>ETag</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FilePath__c</fullName>
        <label>File Path</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalOrganization__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_FilePath__c</fullName>
        <label>KQ_FilePath</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModified__c</fullName>
        <label>Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Metadata__c</fullName>
        <label>Metadata</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <label>Parent Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResolvedFilePath__c</fullName>
        <label>Resolved FilePath</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cdp_sys_SourceVersion__c</fullName>
        <label>cdp_sys_SourceVersion</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>